--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t cduffy1234/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run cduffy1234/react-test npm test -- --coverage
+  - docker run -e CI=true cduffy1234/react-test npm test -- --coverage
 
 after_success:
   - docker build -t cduffy1234/multi-client ./client
